# ClientServerQT

./: Makefile  README.md
src/: Doxyfile  Makefile  config.json  init_db.sql
src/client/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/client/client/: client.cpp  client.h
src/client/randomStringGenerator/: randomStringGenerator.h
src/client/utility/: dateTime.h  randomStringGenerator.h  requestGenerator.h
src/client/view/: binaryViewPopup.cpp  binaryViewPopup.h  binaryViewPopup.ui  dataGenerationPopup.cpp  dataGenerationPopup.h  dataGenerationPopup.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  stringGenerationPopup.cpp  stringGenerationPopup.h  stringGenerationPopup.ui  viewShowPopup.cpp  viewShowPopup.h  viewShowPopup.ui
src/common/: data.h  dateTime.h
src/common/constants/: BDNames.h  URI.h  configJsonNames.h  httpHeaderConstants.h  jsonNames.h
src/common/enums/: contentType.h  requestMethod.h  statusCode.h
src/common/http/: header.h  request.h  requestString.h  response.h  statusMessage.h
src/common/utility/: dateTime.h  randomStringGenerator.h  requestGenerator.h
src/server/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/server/config/: config.h
src/server/controller/: controller.h  jsonController.h  stringController.h
src/server/enums/: contentType.h  statusCode.h
src/server/http/: header.h  response.h  statusMessage.h
src/server/repository/: binaryRepository.cpp  binaryRepository.h  jsonRepository.cpp  jsonRepository.h  stringRepository.cpp  stringRepository.h  viewRepository.cpp  viewRepository.h
src/server/server/: server.cpp  server.h
src/server/service/: binaryService.h  jsonService.h  stringService.h  viewService.h
